--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -142,38 +142,40 @@
     </div>
 </div>
 
+<div id="unpaid-data" style="display: none;" data-unpaid='{{ unpaid|tojson }}' data-month="{{ current_month }}"></div>
+
 <script>
     function sendBulkWhatsApp() {
-        var unpaidMembers = {{ unpaid| tojson | safe
-    }};
-    var monthVal = "{{ current_month }}";
+        var dataEl = document.getElementById('unpaid-data');
+        var unpaidMembers = JSON.parse(dataEl.getAttribute('data-unpaid'));
+        var monthVal = dataEl.getAttribute('data-month');
 
-    unpaidMembers.forEach(function (member) {
-        var message = encodeURIComponent(
-            "Hi " + member.name + ", this is a reminder that your gym fee for " + monthVal + " is pending. " +
-            "Please pay at your earliest convenience. Thank you!"
-        );
-        var url = "https://wa.me/" + member.phone.replace(/[^0-9]/g, '') + "?text=" + message;
-        window.open(url, '_blank');
-    });
-}
+        unpaidMembers.forEach(function (member) {
+            var message = encodeURIComponent(
+                "Hi " + member.name + ", this is a reminder that your gym fee for " + monthVal + " is pending. " +
+                "Please pay at your earliest convenience. Thank you!"
+            );
+            var url = "https://wa.me/" + member.phone.replace(/[^0-9]/g, '') + "?text=" + message;
+            window.open(url, '_blank');
+        });
+    }
 
     function sendBulkEmail() {
-        var unpaidMembers = {{ unpaid| tojson | safe
-    }};
-    var monthVal = "{{ current_month }}";
+        var dataEl = document.getElementById('unpaid-data');
+        var unpaidMembers = JSON.parse(dataEl.getAttribute('data-unpaid'));
+        var monthVal = dataEl.getAttribute('data-month');
 
-    var emails = unpaidMembers.map(function (m) { return m.email; }).filter(function (e) { return e; }).join(',');
-    var subject = encodeURIComponent("Payment Reminder - " + monthVal);
-    var body = encodeURIComponent(
-        "Dear Member,\n\n" +
-        "This is a friendly reminder that your gym membership fee for " + monthVal + " is pending.\n\n" +
-        "Please make the payment at your earliest convenience.\n\n" +
-        "Thank you!"
-    );
+        var emails = unpaidMembers.map(function (m) { return m.email; }).filter(function (e) { return e; }).join(',');
+        var subject = encodeURIComponent("Payment Reminder - " + monthVal);
+        var body = encodeURIComponent(
+            "Dear Member,\n\n" +
+            "This is a friendly reminder that your gym membership fee for " + monthVal + " is pending.\n\n" +
+            "Please make the payment at your earliest convenience.\n\n" +
+            "Thank you!"
+        );
 
-    window.location.href = "mailto:" + emails + "?subject=" + subject + "&body=" + body;
-}
+        window.location.href = "mailto:" + emails + "?subject=" + subject + "&body=" + body;
+    }
 </script>
 {% endif %}
 
